--- a/PStorebyWhiteLotus/user.css
+++ b/PStorebyWhiteLotus/user.css
@@ -104,7 +104,7 @@ a{
     cursor: pointer;
     background-color: #0f71f1;
 }
-.login-box form u{
+.login-box form u,.login-box form .signup{
     text-decoration: none;
     font-size: 1rem;
     padding-top: 0.8rem;
@@ -153,35 +153,35 @@ a{
 }
 @media only screen and (max-width: 900px){
   .login_section p{
-        font-size: 12px;
+    font-size: 12px;
   }
   .login-box{
-        width: 100%;
-        height: auto;
-        margin: 40px 0px;
+    width: 100%;
+    height: auto;
+    margin: 40px 0px;
   }
   .login-box form input{
-        padding: 0.3rem 1.0rem;
-        margin-bottom: 0.6rem;
-        font-size: 0.6rem;
+    padding: 0.3rem 1.0rem;
+    margin-bottom: 0.6rem;
+    font-size: 0.6rem;
   }
   .login-box form .login{
-        padding: 0.2rem 0.4rem;
-        font-size: 0.8rem;
-        margin-bottom: 0.6rem;
+    padding: 0.2rem 0.4rem;
+    font-size: 0.8rem;
+    margin-bottom: 0.6rem;
   }
   .login-box form a{
-        font-size: 0.8rem;
-        margin: 2rem 0rem;
+    font-size: 0.8rem;
+    margin: 2rem 0rem;
   }
   .login-box .flp span{
-        font-size: 20px;
+    font-size: 20px;
   }
   .login-box .flp span i{
-        margin-top: 5px;
+    margin-top: 5px;
   }
   .mainCaptcha{
-        letter-spacing: 7px;
+    letter-spacing: 7px;
 }}
 #user_page{
     height: auto;
@@ -445,7 +445,7 @@ table th{
     border-radius: 10px;
     margin-right: 8px;
 }
-.rec-h h3{
+.rec-h h3,.postCreat .pro-table div h3{
     float: left;
     color: #420040;
     font-size: 18px;
@@ -717,12 +717,12 @@ table tr td{
     color: #3B1540;
     cursor: pointer;
 }
-.success-data ul,.search-status-data ul,.search-user-status-data ul,.user-search-status-data ul{
+.success-data ul,.search-status-data ul,.search-user-status-data ul,.user-search-status-data ul,.postCreat .pro-table ul{
 	list-style: none;
 	display: flex;
 	flex-direction: column;
 }
-.success-data ul li,.search-status-data ul li,.search-user-status-data ul li,.user-search-status-data ul li{
+.success-data ul li,.search-status-data ul li,.search-user-status-data ul li,.user-search-status-data ul li,.postCreat .pro-table ul li{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1089,7 +1089,7 @@ table tr td{
     color: gray;
     font-size: 15px;
 }
-.income-content .pro-table,.profile-content .pro-table{
+.income-content .pro-table,.profile-content .pro-table,.postCreat .pro-table{
     width: 100%;
 }
 .income-table{
@@ -1285,7 +1285,7 @@ table tr td{
     .anti-cus-table{
         margin-top: 0px;
     }
-    .rec-h h3{
+    .rec-h h3,.postCreat .pro-table div h3{
         font-size: 16px!important;
     }
     .roundclose{
@@ -1420,5 +1420,102 @@ table tr td{
     .profile-form .right .form-group{
         width: 95%;
         margin: 0px 2.5%;
+    }
+}
+.refreshList{
+    background: transparent;
+    padding: 10px 5px;
+    width: 80px;
+    margin: 5px auto;
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: 750px;
+    z-index: 999;
+    position: fixed;
+}
+.r3{
+    width: 60px;
+    height: 25px;
+    margin: 15px auto;
+    background: #fff;
+    box-shadow: 0px 0px 2px 0.5px #000;
+    font-size: 15px;
+    text-align: center;
+    padding: 2px;
+    z-index: 99;
+}
+.postCreat .pro-table{
+	padding: 0px 0px 15px 0px;
+}
+.postCreat .pro-table a img{
+	position: relative;
+	width: 100%;
+    height: 240px;
+    margin: 0px auto;
+}
+.postCreat .pro-table div{
+	padding: 0px 15px;
+}
+.postCreat .pro-table div .plus{
+	width: 55px;
+	height: 55px;
+	background: #0c8ff0;
+	color: #fff;
+	border: 4px solid #fff;
+	border-radius: 50%;
+	text-align: center;
+	font-size: 34px;
+	font-weight: bold;
+	padding: 0px 0px;
+	margin: 0px auto;
+	margin-top: -30px;
+	position: relative;
+    cursor: pointer;
+}
+.postCreat .pro-table div h5{
+	color: #3B1540;
+	text-align: center;
+	font-family: "Poppins", sans-serif;
+}
+.voidSZ{
+	color: grey;
+	font-size: 12px;
+	padding: 4px 10px;
+	text-align: center;
+}
+.postCreat .pro-table div .flo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    padding: 0px 0px;
+}
+.postCreat .pro-table div .flo a{
+    font-size: 30px;
+    margin: 10px auto;
+}
+@media only screen and (max-width: 900px){
+    .refreshList{
+        left: 140px;
+    }
+    .postCreat .pro-table a img{
+        position: relative;
+        width: 100%;
+        height: 192px;
+        margin:0px;
+    }
+    .postCreat .pro-table div .plus{
+        font-size: 40px;
+        padding: 2px 5px;
+    }
+    .postCreat .pro-table div .flw{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-top: 10px;
+    }
+    .postCreat .pro-table div .flo a{
+        font-size: 25px;
     }
 }
